--- a/Share Class/Views/MainWindow.xaml
+++ b/Share Class/Views/MainWindow.xaml
@@ -4,8 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Share_Class"
+        xmlns:vm="clr-namespace:Share_Class.ViewModels"
         Title="Share Class" Height="720" Width="1410" WindowStartupLocation="CenterScreen"
-        WindowStyle="None" AllowsTransparency="True" Background="Transparent" Loaded="Window_Loaded">
+        WindowStyle="None" AllowsTransparency="True" Background="Transparent">
 
     <WindowChrome.WindowChrome>
         <WindowChrome CaptionHeight="30">
@@ -13,13 +14,17 @@
         </WindowChrome>
     </WindowChrome.WindowChrome>
 
+    <Window.DataContext>
+        <vm:MainWindowViewModel />
+    </Window.DataContext>
+    
     <DockPanel x:Name="RootWindow" Background="{StaticResource MainColor}" Margin="7">
 
         <DockPanel.Effect>
             <DropShadowEffect x:Name="WindowDropShadowEffect" Opacity="0.5" ShadowDepth="4"></DropShadowEffect>
         </DockPanel.Effect>
 
-        <DockPanel x:Name="TitleBar" DockPanel.Dock="Top" Background="{StaticResource SecondColor}" Height="25">
+        <DockPanel x:Name="TitleBar" DockPanel.Dock="Top" Background="{StaticResource HeaderColor}" Height="25">
 
             <Button x:Name="CloseButton" Click="CloseButton_Click" DockPanel.Dock="Right" Width="15" Height="15" Margin="5,0,10,0" Background="Red" WindowChrome.IsHitTestVisibleInChrome="True" BorderThickness="0">
                 <Button.Resources>
@@ -47,7 +52,7 @@
 
             <TextBlock Margin="10,0,0,0" FontFamily="Webdings" FontSize="25">L</TextBlock>
             <Border CornerRadius="3" BorderThickness="1.5" BorderBrush="Black" Height="20" Width="200">
-                <TextBox Width="190" Height="17" WindowChrome.IsHitTestVisibleInChrome="True" Background="{StaticResource SecondColor}" BorderThickness="0" FontWeight="Bold" FontSize="13"></TextBox>
+                <TextBox Width="190" Height="17" WindowChrome.IsHitTestVisibleInChrome="True" Background="{StaticResource HeaderColor}" BorderThickness="0" FontWeight="Bold" FontSize="13"></TextBox>
             </Border>
 
             <TextBlock Margin="-155,0,0,0" HorizontalAlignment="Center" FontSize="16" FontWeight="Bold" x:Name="User_name">user name</TextBlock>
