--- a/Share Class/Views/MainWindow.xaml
+++ b/Share Class/Views/MainWindow.xaml
@@ -51,7 +51,7 @@
                 </Button.Resources>
             </Button>
 
-            <TextBlock Margin="75,0,0,0" HorizontalAlignment="Center" FontSize="16" FontWeight="Bold" x:Name="User_name" Text="{Binding Title}"></TextBlock>
+            <TextBlock Margin="75,0,0,0" HorizontalAlignment="Center" FontSize="16" FontWeight="Bold" x:Name="User_name" Text="share class"></TextBlock>
         </DockPanel>
 
         <ContentControl>
@@ -62,19 +62,36 @@
                 </Grid.ColumnDefinitions>
 
                 <ScrollViewer Grid.Column="0" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
-                    <WrapPanel>
-                        <Border Margin="20,20,0,20" Width="300" Height="120" BorderBrush="Black" BorderThickness="1" CornerRadius="5">
-                            <Grid>
-                                <TextBlock Foreground="{StaticResource FontColor}" Margin="20" FontSize="25" MaxWidth="250" Height="30" VerticalAlignment="Top" HorizontalAlignment="Center" TextTrimming="CharacterEllipsis">HomeTask Name</TextBlock>
-                                <TextBlock Foreground="{StaticResource FontColor}" FontSize="20" VerticalAlignment="Bottom" Margin="20,10,10,10" MaxWidth="200" TextTrimming="CharacterEllipsis" HorizontalAlignment="Left">11.12.2022 13:00:00</TextBlock>
-                            </Grid>
-                        </Border>
-                        <Border Margin="20,20,0,20" Width="300" Height="120" BorderBrush="Black" BorderThickness="1" CornerRadius="5"></Border>
-                        <Border Margin="20,20,0,20" Width="300" Height="120" BorderBrush="Black" BorderThickness="1" CornerRadius="5"></Border>
-                        <Border Margin="20,20,0,20" Width="300" Height="120" BorderBrush="Black" BorderThickness="1" CornerRadius="5"></Border>
-                        <Border Margin="20,20,0,20" Width="300" Height="120" BorderBrush="Black" BorderThickness="1" CornerRadius="5"></Border>
-                        <Border Margin="20,20,0,20" Width="300" Height="120" BorderBrush="Black" BorderThickness="1" CornerRadius="5"></Border>
-                    </WrapPanel>
+                    
+                    <ItemsControl ItemsSource="{Binding HomeTasks}">
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <WrapPanel />
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <Border Margin="20,20,0,20" Width="300" Height="120" BorderBrush="Black" BorderThickness="1" CornerRadius="5">
+                                    <Grid>
+                                        <TextBlock Text="{Binding Path=Name}" Foreground="{StaticResource ButtonsColor}" Margin="20" FontSize="25" MaxWidth="250" 
+                                                   Height="30" VerticalAlignment="Top" HorizontalAlignment="Center" TextTrimming="CharacterEllipsis">
+
+                                            <i:Interaction.Triggers>
+                                                <i:EventTrigger EventName="MouseLeftButtonDown">
+                                                    <i:InvokeCommandAction Command="{Binding Path=OpenHomeTaskCommand}"/>
+                                                </i:EventTrigger>
+                                            </i:Interaction.Triggers>
+                                        </TextBlock>
+                                        
+                                        <TextBlock Text="{Binding Path=Deadline_Date}" Foreground="{StaticResource FontColor}" FontSize="20" VerticalAlignment="Bottom" Margin="20,10,10,10" 
+                                                   MaxWidth="250" TextTrimming="CharacterEllipsis" HorizontalAlignment="Left"></TextBlock>
+                                    </Grid>
+                                </Border>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+
                 </ScrollViewer>
 
                 <Border Grid.Column="0" Width="1" BorderThickness="1" BorderBrush="Black" HorizontalAlignment="Right"></Border>
@@ -82,12 +99,19 @@
                 <ScrollViewer Grid.Column="1" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
                     <Grid>
                         <Grid.RowDefinitions>
-                            <RowDefinition></RowDefinition>
+                            <RowDefinition Height="40"></RowDefinition>
                             <RowDefinition></RowDefinition>
                         </Grid.RowDefinitions>
 
                         <Border CornerRadius="3" BorderThickness="1.5" BorderBrush="Black" Height="30" Margin="100,10,100,0" Grid.Row="0">
-                            <TextBox Margin="5,0,5,0" Height="27" Foreground="{StaticResource FontColor}" BorderThickness="0" FontSize="19">
+                            <TextBox Margin="5,0,5,0" Height="27" Foreground="{StaticResource FontColor}" BorderThickness="0" FontSize="19"
+                                     Text="{Binding SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="TextChanged">
+                                        <i:InvokeCommandAction Command="{Binding OnSearchTextInputCommand}"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
 
                                 <TextBox.Style>
                                     <Style TargetType="TextBox" xmlns:sys="clr-namespace:System;assembly=mscorlib">
@@ -108,26 +132,34 @@
                             </TextBox>
                         </Border>
 
-                        <WrapPanel Grid.Row="1">
-                            <Border Margin="20,20,0,20" Width="300" Height="120" BorderBrush="Black" BorderThickness="1" CornerRadius="5">
-                                <Grid>
-                                    <TextBlock Foreground="{StaticResource FontColor}" Margin="20" FontSize="25" MaxWidth="250" Height="30" VerticalAlignment="Top" HorizontalAlignment="Center" TextTrimming="CharacterEllipsis">Class Name</TextBlock>
-                                    <TextBlock Foreground="{StaticResource FontColor}" FontSize="20" VerticalAlignment="Bottom" Margin="20,10,20,10" MaxWidth="260" TextTrimming="CharacterEllipsis" HorizontalAlignment="Left">Petrov Valentin Vasilyevichhh</TextBlock>
-                                </Grid>
-                            </Border>
-                            <Border Margin="20,20,0,20" Width="300" Height="120" BorderBrush="Black" BorderThickness="1" CornerRadius="5"></Border>
-                            <Border Margin="20,20,0,20" Width="300" Height="120" BorderBrush="Black" BorderThickness="1" CornerRadius="5"></Border>
-                            <Border Margin="20,20,0,20" Width="300" Height="120" BorderBrush="Black" BorderThickness="1" CornerRadius="5"></Border>
-                            <Border Margin="20,20,0,20" Width="300" Height="120" BorderBrush="Black" BorderThickness="1" CornerRadius="5"></Border>
-                            <Border Margin="20,20,0,20" Width="300" Height="120" BorderBrush="Black" BorderThickness="1" CornerRadius="5"></Border>
-                            <Border Margin="20,20,0,20" Width="300" Height="120" BorderBrush="Black" BorderThickness="1" CornerRadius="5"></Border>
-                            <Border Margin="20,20,0,20" Width="300" Height="120" BorderBrush="Black" BorderThickness="1" CornerRadius="5"></Border>
-                            <Border Margin="20,20,0,20" Width="300" Height="120" BorderBrush="Black" BorderThickness="1" CornerRadius="5"></Border>
-                            <Border Margin="20,20,0,20" Width="300" Height="120" BorderBrush="Black" BorderThickness="1" CornerRadius="5"></Border>
-                            <Border Margin="20,20,0,20" Width="300" Height="120" BorderBrush="Black" BorderThickness="1" CornerRadius="5"></Border>
-                            <Border Margin="20,20,0,20" Width="300" Height="120" BorderBrush="Black" BorderThickness="1" CornerRadius="5"></Border>
-                            <Border Margin="20,20,0,20" Width="300" Height="120" BorderBrush="Black" BorderThickness="1" CornerRadius="5"></Border>
-                        </WrapPanel>
+                        <ItemsControl ItemsSource="{Binding ShownClassRooms}" Grid.Row="1">
+                            <ItemsControl.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <WrapPanel/>
+                                </ItemsPanelTemplate>
+                            </ItemsControl.ItemsPanel>
+
+                            <ItemsControl.ItemTemplate>
+                                <DataTemplate>
+                                    <Border Margin="20,20,0,20" Width="300" Height="120" BorderBrush="Black" BorderThickness="1" CornerRadius="5">
+                                        <Grid>
+                                            <TextBlock Text="{Binding Path=Name}" Foreground="{StaticResource ButtonsColor}" Margin="20" FontSize="25" MaxWidth="250" Height="30" 
+                                                       VerticalAlignment="Top" HorizontalAlignment="Center" TextTrimming="CharacterEllipsis">
+                                                
+                                                 <i:Interaction.Triggers>
+                                                    <i:EventTrigger EventName="MouseLeftButtonDown">
+                                                        <i:InvokeCommandAction Command="{Binding Path=OpenClassRoomCommand}"/>
+                                                    </i:EventTrigger>
+                                                </i:Interaction.Triggers>
+                                            </TextBlock>
+                                            
+                                            <TextBlock Text="{Binding Path=Teacher_Name}" Foreground="{StaticResource FontColor}" FontSize="20" VerticalAlignment="Bottom" 
+                                                       Margin="20,10,20,10" MaxWidth="260" TextTrimming="CharacterEllipsis" HorizontalAlignment="Left"></TextBlock>
+                                        </Grid>
+                                    </Border>
+                                </DataTemplate>
+                            </ItemsControl.ItemTemplate>
+                        </ItemsControl>
                     </Grid>
                 </ScrollViewer>
 
@@ -138,6 +170,12 @@
                             <Setter Property="CornerRadius" Value="25"/>
                         </Style>
                     </Button.Resources>
+
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="Click">
+                            <i:InvokeCommandAction Command="{Binding CreateClassRoomCommand}" PassEventArgsToCommand="True"/>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
                 </Button>
 
                 <Button Grid.Column="1" Width="50" BorderBrush="Black" Height="50" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,20,10" FontFamily="Webdings" FontSize="35" FontWeight="Bold" Background="{StaticResource ButtonsColor}">
@@ -150,18 +188,11 @@
 
                     <i:Interaction.Triggers>
                         <i:EventTrigger EventName="Click">
-                            <i:InvokeCommandAction Command="{Binding delegateCommand}" PassEventArgsToCommand="True"/>
+                            <i:InvokeCommandAction Command="{Binding SearchClassRoomCommand}" PassEventArgsToCommand="True"/>
                         </i:EventTrigger>
                     </i:Interaction.Triggers>
                 </Button>
-
-                <!--<CheckBox Grid.Column="1" Width="50" Height="50" VerticalAlignment="Bottom" HorizontalAlignment="Right">
-                    <i:Interaction.Triggers>
-                        <i:EventTrigger EventName="Checked">
-                            <i:InvokeCommandAction Command="{Binding delegateCommand}" PassEventArgsToCommand="True"/>
-                        </i:EventTrigger>
-                    </i:Interaction.Triggers>
-                </CheckBox>-->
+                
             </Grid>
         </ContentControl>
     </DockPanel>
