--- a/Share Class/Views/SignUpDialog.xaml
+++ b/Share Class/Views/SignUpDialog.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Share_Class.Views"
         xmlns:vm="clr-namespace:Share_Class.ViewModels"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         mc:Ignorable="d"
         Title="SignUp" Height="450" Width="800" WindowStartupLocation="CenterScreen"
         WindowStyle="None" AllowsTransparency="True" Background="Transparent">
@@ -65,7 +66,8 @@
                 </Grid.RowDefinitions>
 
                 <Border CornerRadius="3" BorderThickness="1.5" BorderBrush="Black" Height="30" Margin="50,0,50,0" Grid.Row="1">
-                    <TextBox Foreground="{StaticResource FontColor}" Margin="5,0,5,0" Height="27" BorderThickness="0" FontSize="19">
+                    <TextBox Foreground="{StaticResource FontColor}" Margin="5,0,5,0" Height="27" BorderThickness="0" FontSize="19"
+                             Text="{Binding Name}">
 
                         <TextBox.Style>
                             <Style TargetType="TextBox" xmlns:sys="clr-namespace:System;assembly=mscorlib">
@@ -87,7 +89,8 @@
                 </Border>
                 
                 <Border CornerRadius="3" BorderThickness="1.5" BorderBrush="Black" Height="30" Margin="50,0,50,0" Grid.Row="2">
-                    <TextBox Foreground="{StaticResource FontColor}" Margin="5,0,5,0" Height="27" BorderThickness="0" FontSize="19">
+                    <TextBox Foreground="{StaticResource FontColor}" Margin="5,0,5,0" Height="27" BorderThickness="0" FontSize="19"
+                             Text="{Binding Login}">
 
                         <TextBox.Style>
                             <Style TargetType="TextBox" xmlns:sys="clr-namespace:System;assembly=mscorlib">
@@ -109,7 +112,8 @@
                 </Border>
 
                 <Border CornerRadius="3" BorderThickness="1.5" BorderBrush="Black" Height="30" Margin="50,0,50,0" Grid.Row="3">
-                    <TextBox Foreground="{StaticResource FontColor}" Margin="5,0,5,0" Height="27" BorderThickness="0" FontSize="19">
+                    <TextBox Foreground="{StaticResource FontColor}" Margin="5,0,5,0" Height="27" BorderThickness="0" FontSize="19"
+                             Text="{Binding Password}">
 
                         <TextBox.Style>
                             <Style TargetType="TextBox" xmlns:sys="clr-namespace:System;assembly=mscorlib">
@@ -138,6 +142,12 @@
                             <Setter Property="CornerRadius" Value="8"/>
                         </Style>
                     </Button.Resources>
+
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="Click">
+                            <i:InvokeCommandAction Command="{Binding SignUpCommand}"/>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
                 </Button>
             </Grid>
         </ContentControl>
